debug_report.txt
SOLARPUNK SYSTEM DIAGNOSTIC - Mon 02/02/2026 21:57:27.19 
=========================================== 
[1] PYTHON ENVIRONMENT 
----------------------- 
Python 3.14.2
Package            Version
------------------ ---------
blinker            1.9.0
certifi            2026.1.4
charset-normalizer 3.4.4
click              8.3.1
colorama           0.4.6
Flask              3.1.2
idna               3.11
itsdangerous       2.2.0
Jinja2             3.1.6
MarkupSafe         3.0.3
numpy              2.4.2
opencv-python      4.13.0.90
pillow             12.1.0
pip                25.3
python-dotenv      1.2.1
qrcode             8.2
requests           2.32.5
urllib3            2.6.3
Werkzeug           3.1.5
 
[2] DIRECTORY STRUCTURE 
----------------------- 
C:\Users\carol\SolarPunk\data
C:\Users\carol\SolarPunk\debug.bat
C:\Users\carol\SolarPunk\debug_log.txt
C:\Users\carol\SolarPunk\debug_report.txt
C:\Users\carol\SolarPunk\fix_github.bat
C:\Users\carol\SolarPunk\memvid_repo
C:\Users\carol\SolarPunk\static
C:\Users\carol\SolarPunk\templates
C:\Users\carol\SolarPunk\test_fix.bat
C:\Users\carol\SolarPunk\web_dashboard
 
[3] GIT STATUS 
------------- 
fatal: not a git repository (or any of the parent directories): .git
fatal: not a git repository (or any of the parent directories): .git
 
[4] CLOUDFLARE CHECK 
-------------------- 
000 
[5] PYTHON MODULE CHECK 
----------------------- 
  File "<string>", line 1
    try: import flask; print('flask: OK'); except: print('flask: MISSING')
                                           ^^^^^^
SyntaxError: invalid syntax
  File "<string>", line 1
    try: import cv2; print('opencv: OK'); except: print('opencv: MISSING')
                                          ^^^^^^
SyntaxError: invalid syntax
  File "<string>", line 1
    try: import numpy; print('numpy: OK'); except: print('numpy: MISSING')
                                           ^^^^^^
SyntaxError: invalid syntax
  File "<string>", line 1
    try: import qrcode; print('qrcode: OK'); except: print('qrcode: MISSING')
                                             ^^^^^^
SyntaxError: invalid syntax
 
[6] AGENT FILES CHECK 
--------------------- 
 
[7] KEY DIRECTORIES 
------------------- 
web_dashboard: EXISTS 
memvid_repo: EXISTS 
data: EXISTS 
 
[8] WINDOWS SPECIFICS 
--------------------- 

Microsoft Windows [Version 10.0.19045.6466]
PowerShell version: 

Major  Minor  Build  Revision
-----  -----  -----  --------
5      1      19041  6456    


 
